--- a/.minttyrc
+++ b/.minttyrc
@@ -3,7 +3,7 @@ Transparency=low
 FontHeight=14
 Columns=122
 Rows=59
-Font=Osaka|“™•
+Font=Osakaï¼ç­‰å¹…
 Locale=ja_JP
 Charset=UTF-8
 BackspaceSendsBS=yes
